--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="ingresar">Ingresar</string>
 
     <string name="registrarse">Registrarse</string>
+    <string name="siguiente">Siguiente</string>
     <!-- <string name="tv1">prueba</string> -->
 
 
