--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
 
     <string name="registrarse">Registrarse</string>
     <string name="siguiente">Siguiente</string>
+    <string name="report_planned_date">DD/MM/AA</string>
     <!-- <string name="tv1">prueba</string> -->
 
 
