--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,8 @@
         <item>Cédula de Ciudadanía</item>
         <item>Tarjeta de Identidad</item>
     </string-array>
+    <string name="msg_required_filed">Campo Obligatorio</string>
+    <string name="radio_male">Másculino</string>
+    <string name="radio_female">Femenino</string>
 
 </resources>
