Los campos ya están validados y ya tengo en la interfaz 2 toda la información necesaria para empezar a utilizar las Apis

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,9 @@
         <item>Cédula de Ciudadanía</item>
         <item>Tarjeta de Identidad</item>
     </string-array>
-    <string name="msg_required_filed">Campo Obligatorio</string>
+    <string name="msg_required_failed">Campo Obligatorio</string>
+    <string name="msg_email_failed">El correo es inválido</string>
+    <string name="msg_password_failed">Las contraseñas no coinciden</string>
     <string name="radio_male">Másculino</string>
     <string name="radio_female">Femenino</string>
 
