Realiza el registro siempre y cuando se esté sobre el camino feliz! Voy a intentar pasarlo para que utilice tareas asincronas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,15 +22,18 @@
     <string name="phone_user">Número de Celular</string>
     <string name="address_user">Dirección</string>
     <string name="password_again">Confirmar Contraseña</string>
+
     <!-- <string name="tv1">prueba</string> -->
     <string-array name="kind_of_id">
-        <item>Cédula de Ciudadanía</item>
-        <item>Tarjeta de Identidad</item>
+        <item>C.C</item>
+        <item>T.I</item>
     </string-array>
     <string name="msg_required_failed">Campo Obligatorio</string>
     <string name="msg_email_failed">El correo es inválido</string>
     <string name="msg_password_failed">Las contraseñas no coinciden</string>
     <string name="radio_male">Másculino</string>
     <string name="radio_female">Femenino</string>
+    <string name="userapp">Usuario</string>
+    <string name="loading">Cargando...</string>
 
 </resources>
