creacion de la clase para hacer el llamado a la categoria por medio gson
 Conflicts:
	app/src/main/java/com/unicauca/domifoods/LoginActivity.java
	app/src/main/java/com/unicauca/domifoods/apiUser/ApiUser.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="si">Si</string>
     <string name="cancel">Cancelar</string>
     <string name="save">Guardar</string>
+    <string name="confirm">Confirmation</string>
+    <string name="remove">remove</string>
 
 </resources>
